Shared commands.js with client to make frame commands easier to process

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -4,6 +4,7 @@
 	<body>
 		<canvas id="canvas"></canvas>
 
+		<script src="../commands.js"></script>
 		<script src="ugly-viewer.js"></script>
 	</body>
 </html>
