Use requestAnimationFrame on client

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<canvas id="canvas"></canvas>
 
+		<script src="requestAnimationFrame.js"></script>
 		<script src="../lib/commands.js"></script>
 		<script src="ugly-viewer.js"></script>
 	</body>
