Write canvas as data URI, fix moveTo bug

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -3,7 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="reset.css" />
 	</head>
 	<body>
-		<canvas id="canvas"></canvas>
+		<canvas id="canvas" data=""></canvas>
 
 		<script src="requestAnimationFrame.js"></script>
 		<script src="../lib/commands.js"></script>
